--- a/src/assets/scss/core/base/_helpers.scss
+++ b/src/assets/scss/core/base/_helpers.scss
@@ -531,6 +531,8 @@ img.has-shadow {
 		}
 	}
 
+
+
 	// Spacing, spacers
 	.spacer-4-mobile {
 		padding-top: 4px;
@@ -567,6 +569,8 @@ img.has-shadow {
 
 @include media( '>medium' ) {
 
+
+
 	.ta-l-desktop {
 		text-align: left;
 	}
@@ -594,3 +598,88 @@ img.has-shadow {
 		}
 	}
 }
+
+.slick-prev:before {
+	font-size: 40px;
+	left: 20px;
+	color: black !important;
+	visibility: visible;
+}
+
+
+.slick-next:before {
+	font-size: 40px;
+	right: 20px;
+	visibility: visible;
+	color: black !important;
+}
+
+
+@media screen and (max-width: 980px) {
+	.slick-prev::before {
+		visibility: hidden;
+	}
+	.product-detail {
+		flex-direction: column;
+	}
+	.slick-next::before {
+		visibility: hidden;
+	}
+}
+
+
+
+/*Right Side Buttons Start*/
+.sticky-container{
+	padding: 0px;
+	margin: 0px;
+	position: fixed;
+	right: -130px;
+	bottom: 130px;
+	width: 200px;
+}
+
+.sticky li{
+	list-style-type: none;
+	background-color: #333;
+	color: #efefef;
+	height: 43px;
+	padding: 0px;
+	margin: 0px 0px 1px 0px;
+	-webkit-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	transition:all 0.25s ease-in-out;
+	cursor: pointer;
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); 
+filter: gray; 
+-webkit-filter: grayscale(60%); 
+}
+
+.sticky li:hover{
+	background-color: #f7941e;
+
+	margin-left: -135px;
+	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'1 0 0 0 0, 0 1 0 0 0, 0 0 1 0 0, 0 0 0 1 0\'/></filter></svg>#grayscale");
+			-webkit-filter: grayscale(0%);
+}
+
+.sticky li img{
+	float: left;
+	margin: 5px 5px;
+	margin-right: 10px;
+}
+
+.sticky li p{
+float:left;
+	padding: 0px;
+	margin: 0px;
+	text-transform: uppercase;
+	line-height: 43px;
+}
+/*Right Side Buttons End*/
+
+
+  
