--- a/src/assets/scss/settings/base/_colors.scss
+++ b/src/assets/scss/settings/base/_colors.scss
@@ -3,7 +3,7 @@
 // The color palette
 $palette: (
 	light: (
-		1: #ECEDED,
+		1: #330656,
 		2: #9CA9B3,
 		3: #717D86
 	),
@@ -13,10 +13,10 @@ $palette: (
 		3: #33363A
 	),
 	primary: (
-		1: #6163FF,
-		2: #ACADFF,
-		3: #5658DD,
-		4: #E9E9FF
+		1: #f7941e,
+		2: #fcb900,
+		3: #f7941e,
+		4: #fcb900
  	),
 	secondary: (
 		1: #24E5AF,
@@ -79,7 +79,7 @@ $bg--color: (
 	body-shadow:	0 20px 48px rgba(get-color(dark, 1), .8),	// body shadow when a boxed layout is used (set to null if don't want a shadow)
 	body-outer:		lighten(get-color(dark, 1), 2%),			// outer bg color when a boxed layout is used
 	bg-color: 		lighten(get-color(light, 1), 9%),			// .has-bg-color helper class
-	shadow: 		0 24px 64px rgba(get-color(dark, 1), .64),	// .has-shadow helper class
+	shadow: 		0 24px 64px rgba(get-color(dark, 1), .24),	// .has-shadow helper class
 	code: 			darken(get-color(dark, 1), 3%),
 	code-inverse:	darken(get-color(dark, 1), 3%),
 	check-checked-inverse:	darken(get-color(dark, 1), 3%)
